Included a declaration so as to prevent overflow

--- a/web_static/styles/3-common.css
+++ b/web_static/styles/3-common.css
@@ -1,4 +1,10 @@
+* {
+	box-sizing: inherit;
+}
+
+
 body {
+	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
 	color: #484848;
